[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyplgr-core"
version = "0.0.1"
authors = [
  { name="ohmin839" }
]
description = "A text processor for texts in polytonic Greek"
readme = "README.md"
dependencies = [
  "parsimonious",
]

[project.optional-dependencies]
test = [
  "pytest"
]

[project.scripts]
pyplgrconv = "pyplgr_core.cli.converter:main"
pyplgrtknz = "pyplgr_core.cli.tokenizer:main"
