[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyplgrapi"
version = "0.0.1"
authors = [
  { name="ohmin839" }
]
description = "A text processor for texts in polytonic Greek"
readme = "README.md"
dependencies = [
  "parsimonious"
]

[project.optional-dependencies]
test = [
  "parameterized"
]
